--- a/04-dom-ordertable-localstorage/index.html
+++ b/04-dom-ordertable-localstorage/index.html
@@ -22,14 +22,27 @@
   </form>
 
   <table id="orderTable">
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>Price</th>
-    </tr>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Price</th>
+      </tr>
+    </thead>
+
+    <tbody id="orderTableBody"></tbody>
   </table>
 
-  <button id ="buttonClear">Clear</button>
+  <button id="removeOrdersButton">Remove orders</button>
+
+  <div>
+    <h2> Order Summary </h2>
+
+    <p>Sum: <span id="sum">0</span ></p>
+    <p >Average Price: <span id="averagePrice">0</span></p>
+
+    <button id="calculate">Calculate</button>
+  </div>
 
   <script src="./js/main.js"></script>
 </body>
